--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,6 +8,7 @@ stage('Checkout Code')
 }
 stage('Code Analysis')
 {
+   docker build . -t firstimage
    build job: 'Code Analysis', parameters: [string(name: 'workspace', value: workspace)]
 }
 stage('Code Complile')
