--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,7 +9,7 @@ stage('Checkout Code')
 }
 stage('Code Analysis')
 {
-   docker build . firstimage
+   docker build workspace -t firstimage
    build job: 'Code Analysis', parameters: [string(name: 'workspace', value: workspace)]
 }
 stage('Code Complile')
